appId: ${APP_ID}
---
- launchApp
- assertVisible: "Katalog usług"
- repeat:
    times: 30
    commands:
      - tapOn:
          id: "service-item-5"
      - assertVisible: "Dodaj do koszyka"
      - waitForAnimationToEnd
      - back
      - assertVisible: "Katalog usług"
      - waitForAnimationToEnd
- tapOn:
    id: "btn-flush"
- assertVisible: "Wysłano"